--- a/index.html
+++ b/index.html
@@ -4,20 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HcodeLab - Ferrari</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-    <header class="top-site">
+    <header id="header">
         <img src="assets/images/ferrari-logo.svg" id="logo" alt="Logo" />
         <button type="button">
-            menu
+            <img src="assets/images/menu-black-18dp.svg" alt="menu" />
         </button>
+        <hr />
     </header>
-    <section class="content-site">
+    <main id="home">
+        <header>
+            <h1>SF90 Stradale</h1>
+    <a href="#">Detalhes</a>
+        </header>
+        <section class="gallery">
+            
+            <figure>
+                <img src="assets/images/index/laferrari.jpg" />
+                <figcaption>
+                    <h2>La Ferrari</h2>
+                    <p>V12</p>
+                </figcaption>
+            </figure>
 
-    </section>
-    <footer class="footer-site">
+            <figure>
+                <img src="assets/images/index/ferrari-interior.jpg" />
+                <figcaption>
+            <h2>SF90 Stradale - Interior</h2>
+                    <p>V12 - 3.9L - 720HP</p>
+                </figcaption>
+            </figure>
 
+            <figure>
+                <img src="assets/images/index/f8-tributo.jpg" />
+                <figcaption>
+                    <h2>F8 Tributo</h2>
+                    <p>V8</p>
+                </figcaption>
+            </figure>
+        </section>
+
+        <section class="inspiration">
+            <div class="text">
+                <h2>Inspirando</h2>
+                <p>
+ Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis quos est possimus.                    
+                </p>
+            </div>
+            <div class="car">
+
+            </div>
+        </section>
+
+    </main>
+    <footer id="footer">
+        <button type="button">
+            <img src="assets/images/keyboard_arrow_up-black-18dp.svg" alt="up" />
+        </button>
+
+        <ul>
+            <li class="title">
+                Contato
+            </li>
+            <li>E-mail: 
+                support@ferrari.it
+            </li>
+            <li class="social">
+<a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
+
+ <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
+
+ <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
+
+ <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>       
+            </li>
+        </ul>
+
+<img src="assets/images/ferrari-2.svg" alt="Logo" class="logo"/>
+
+<p>
+    2020 © Hcode. All rights reserved.
+</p>
     </footer>
 </body>
 </html>
