--- a/index.html
+++ b/index.html
@@ -8,13 +8,36 @@
 </head>
 <body>
     <header id="header">
+        <div id="overlay" data-close="menu"></div>
         <img src="assets/images/ferrari-logo.svg" id="logo" alt="Logo" />
-        <button type="button">
+
+        <button type="button" id="btn-open">
             <img src="assets/images/menu-black-18dp.svg" alt="menu" />
         </button>
-        <hr />
+
+        <nav class="menu">
+            <div>
+              <button type="button" id="btn-close" data-close="menu">
+            <img src="/assets/images/close-black-18dp.svg" alt="close"/>
+              </button>  
+
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/our-history.html">Nossa História</a></li>
+                <li><a href="/gallery.html">Galeria</a></li>
+                <li><a href="/contact.html">Contato</a></li>
+              </ul>            
+            </div>
+            <button type="button" class="btn-register">
+                Registre-se / Login
+            </button>
+        </nav>
+        
     </header>
     <main id="home">
+
+        <hr class="italy" />
+
         <header>
             <h1>SF90 Stradale</h1>
     <a href="#">Detalhes</a>
@@ -58,6 +81,16 @@
             </div>
         </section>
 
+        <section class="know">
+            <h1>Conheça a Máquina</h1>
+
+<img src="/assets/images/index/top-view.jpg" alt="Ferrari Top View" />
+
+        </section>
+
+
+
+        
     </main>
     <footer id="footer">
         <button type="button">
@@ -88,5 +121,7 @@
     2020 © Hcode. All rights reserved.
 </p>
     </footer>
+
+    <script type="text/javascript" src="javascript/index.js"></script>
 </body>
 </html>
