--- a/login.html
+++ b/login.html
@@ -46,19 +46,28 @@
 
         <hr class="italy" />
 
-        section>form>.fields>.field*2>label+input
         <section>
+
+            <div class="image"></div>
+
             <form>
-                <div class="fields">
-                    <div class="field">
-                        <label for="email"></label>
-                        <input type="email">
+                <div>
+                    <div class="fields">
+                        <div class="field">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email">
+                        </div>
+                        <div class="field">
+                            <label for="password">Senha</label>
+                            <input type="password" name="password" id="password">
+                        </div>
                     </div>
-                    <div class="field">
-                        <label for=""></label>
-                        <input type="text">
+                    <div class="actions">
+                        <button type="submit">Entrar</button>
+                        <a href="#">Esqueci a senha</a>
                     </div>
                 </div>
+                <p>Você ainda não tem conta, <a href="register.html">clique aqui</a> e cadastre-se.</p>
             </form>
         </section>
 
