--- a/gallery.html
+++ b/gallery.html
@@ -82,29 +82,38 @@
             <img src="assets/images/keyboard_arrow_up-black-18dp.svg" alt="up" />
         </button>
 
-        <ul>
-            <li class="title">
-                Contato
-            </li>
-            <li>E-mail: 
-                support@ferrari.it
-            </li>
-            <li class="social">
-<a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
 
- <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
+        <div class="columns">
 
- <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
+            <ul class="links">
+                <li class="title">Links</li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/our-history.html">Nossa História</a></li>
+                <li><a href="/gallery.html">Galeria</a></li>
+                <li><a href="/contact.html">Contato</a></li>
+            </ul>
 
- <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>       
-            </li>
-        </ul>
+            <ul>
+                <li class="title">
+                    Contato
+                </li>
+                <li>E-mail:
+                    support@ferrari.it
+                </li>
+                <li class="social">
+                    <a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
+                    <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>
+                </li>
+            </ul>
+        </div>
 
-<img src="assets/images/ferrari-2.svg" alt="Logo" class="logo"/>
+        <img src="assets/images/ferrari-2.svg" alt="Logo" class="logo" />
 
-<p>
-    2020 © Hcode. All rights reserved.
-</p>
+        <p>
+            2020 © Hcode. All rights reserved.
+        </p>
     </footer>
 
     <script type="text/javascript" src="javascript/index.js"></script>
