--- a/login.html
+++ b/login.html
@@ -38,13 +38,15 @@
     </header>
     <main id="login" class="page">
 
-        <header>
-            <div class="mask">
-                <h1>Login</h1>
-            </div>
-        </header>
+        <div class="page-header">
+            <header>
+                <div class="mask">
+                    <h1>Login</h1>
+                </div>
+            </header>
 
-        <hr class="italy" />
+            <hr class="italy" />
+        </div>
 
         <section>
 
@@ -78,23 +80,32 @@
             <img src="assets/images/keyboard_arrow_up-black-18dp.svg" alt="up" />
         </button>
 
-        <ul>
-            <li class="title">
-                Contato
-            </li>
-            <li>E-mail:
-                support@ferrari.it
-            </li>
-            <li class="social">
-                <a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
 
-                <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
+        <div class="columns">
 
-                <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
+            <ul class="links">
+                <li class="title">Links</li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/our-history.html">Nossa História</a></li>
+                <li><a href="/gallery.html">Galeria</a></li>
+                <li><a href="/contact.html">Contato</a></li>
+            </ul>
 
-                <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>
-            </li>
-        </ul>
+            <ul>
+                <li class="title">
+                    Contato
+                </li>
+                <li>E-mail:
+                    support@ferrari.it
+                </li>
+                <li class="social">
+                    <a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
+                    <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>
+                </li>
+            </ul>
+        </div>
 
         <img src="assets/images/ferrari-2.svg" alt="Logo" class="logo" />
 
