--- a/error.html
+++ b/error.html
@@ -28,9 +28,9 @@
                 <li><a href="/contact.html">Contato</a></li>
               </ul>            
             </div>
-            <button type="button" class="btn-register">
+            <a href="register.html" class="btn-register">
                 Registre-se / Login
-            </button>
+            </a>
         </nav>
         
     </header>
@@ -73,7 +73,7 @@
 
 
         <div class="columns">
-
+            <div>
             <ul class="links">
                 <li class="title">Links</li>
                 <li><a href="/">Home</a></li>
@@ -96,6 +96,7 @@
                     <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>
                 </li>
             </ul>
+        </div>
         </div>
 
         <img src="assets/images/ferrari-2.svg" alt="Logo" class="logo" />
