--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <li><a href="/contact.html">Contato</a></li>
                 </ul>
             </div>
-            <button type="button" class="btn-register">
+            <a href="register.html" class="btn-register">
                 Registre-se / Login
-            </button>
+            </a>
         </nav>
 
     </header>
@@ -52,7 +52,7 @@
                     <h2>La Ferrari</h2>
                     <p>V12</p>
                 </figcaption>
-                
+
             </figure>
 
             <figure>
@@ -83,7 +83,9 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis quos est possimus.
                 </p>
                 <p class="complete">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sit est eius aperiam in aliquam omnis qui cum ab unde repellat doloremque nobis, esse expedita sequi delectus temporibus provident officiis?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sit est eius aperiam in aliquam
+                    omnis qui cum ab unde repellat doloremque nobis, esse expedita sequi delectus temporibus provident
+                    officiis?
                 </p>
             </div>
             <div class="car">
@@ -92,13 +94,13 @@
         </section>
 
         <section class="know">
-            
+
             <div class="know-1">
                 <h1>Conheça a Máquina</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur natus cumque possimus.
                 </p>
-    <a href="/gallery.html">Detalhes</a>
+                <a href="/gallery.html">Detalhes</a>
             </div>
 
             <img src="/assets/images/index/top-view.jpg" alt="Ferrari Top View" />
@@ -107,15 +109,15 @@
                 <dl>
                     <dt>Motorização</dt>
                     <dd>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </dd>
                     <dt>Desempenho</dt>
                     <dd>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </dd>
                     <dt>Conforto</dt>
                     <dd>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </dd>
                 </dl>
             </div>
@@ -131,27 +133,29 @@
             <img src="assets/images/keyboard_arrow_up-black-18dp.svg" alt="up" />
         </button>
         <div class="columns">
-            <ul class="links">
-                <li class="title">Links</li>
-                <li><a href="/">Home</a></li>
-                <li><a href="/our-history.html">Nossa História</a></li>
-                <li><a href="/gallery.html">Galeria</a></li>
-                <li><a href="/contact.html">Contato</a></li>
-            </ul>
-            <ul>
-                <li class="title">
-                    Contato
-                </li>
-                <li>E-mail:
-                    support@ferrari.it
-                </li>
-                <li class="social">
-                    <a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
-                    <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
-                    <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>
-                </li>
-            </ul>
+            <div>
+                <ul class="links">
+                    <li class="title">Links</li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/our-history.html">Nossa História</a></li>
+                    <li><a href="/gallery.html">Galeria</a></li>
+                    <li><a href="/contact.html">Contato</a></li>
+                </ul>
+                <ul>
+                    <li class="title">
+                        Contato
+                    </li>
+                    <li>E-mail:
+                        support@ferrari.it
+                    </li>
+                    <li class="social">
+                        <a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
+                        <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
+                        <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
+                        <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <img src="assets/images/ferrari-2.svg" alt="Logo" class="logo" />
