--- a/login.html
+++ b/login.html
@@ -30,9 +30,9 @@
                     <li><a href="/contact.html">Contato</a></li>
                 </ul>
             </div>
-            <button type="button" class="btn-register">
+            <a href="register.html" class="btn-register">
                 Registre-se / Login
-            </button>
+            </a>
         </nav>
 
     </header>
@@ -82,29 +82,30 @@
 
 
         <div class="columns">
+            <div>
+                <ul class="links">
+                    <li class="title">Links</li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/our-history.html">Nossa História</a></li>
+                    <li><a href="/gallery.html">Galeria</a></li>
+                    <li><a href="/contact.html">Contato</a></li>
+                </ul>
 
-            <ul class="links">
-                <li class="title">Links</li>
-                <li><a href="/">Home</a></li>
-                <li><a href="/our-history.html">Nossa História</a></li>
-                <li><a href="/gallery.html">Galeria</a></li>
-                <li><a href="/contact.html">Contato</a></li>
-            </ul>
-
-            <ul>
-                <li class="title">
-                    Contato
-                </li>
-                <li>E-mail:
-                    support@ferrari.it
-                </li>
-                <li class="social">
-                    <a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
-                    <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
-                    <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>
-                </li>
-            </ul>
+                <ul>
+                    <li class="title">
+                        Contato
+                    </li>
+                    <li>E-mail:
+                        support@ferrari.it
+                    </li>
+                    <li class="social">
+                        <a href="#"><img src="assets/images/index/facebook.png" alt="Facebook"></a>
+                        <a href="#"><img src="assets/images/index/twitter.png" alt="Twitter"></a>
+                        <a href="#"><img src="assets/images/index/youtube.png" alt="YouTube"></a>
+                        <a href="#"><img src="assets/images/index/instagram.png" alt="Instagram"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <img src="assets/images/ferrari-2.svg" alt="Logo" class="logo" />
